Closed
Bug 1047398
Opened 10 years ago
Closed 10 years ago
nsTWeakRef usage in ServiceWorkerManager makes no sense
Categories
(Core :: DOM: Workers, defect)
Tracking
()
RESOLVED
FIXED
mozilla34
People
(Reporter: bzbarsky, Assigned: baku)
References
Details
Attachments
(1 file)
5.98 KB,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
nsTWeakRef only does something useful if you call forget() on it when the object it's pointing to dies. In particular, you can only nsTWeakRef an object if the object has an nsTWeakRef member that it notifies when going away.
Clearly using nsTWeakRef<Promise> does NOT fulfill this criterion. Hence the crashes in serviceworker tests where we do things like QI deleted objects.
Andrea, since nsm is out do you have time to look here by any chance?
Flags: needinfo?(amarchesini)
Assignee | ||
Updated•10 years ago
|
Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
Assignee | ||
Comment 1•10 years ago
|
||
Attachment #8466219 -
Flags: review?(bugs)
Updated•10 years ago
|
Attachment #8466219 -
Flags: review?(bugs) → review+
Assignee | ||
Comment 2•10 years ago
|
||
Keywords: checkin-needed
Assignee | ||
Comment 3•10 years ago
|
||
Keywords: checkin-needed
Comment 4•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
Updated•10 years ago
|
Flags: qe-verify-
You need to log in
before you can comment on or make changes to this bug.
Description
•