Bug 1047398 - ServiceWorker should use WeakRef instead nsTWeakRef, r=smaug